# connect-four-minimax

./: .gitignore  BOT_FINAL.py  README.md  bot_Matteo.py  bot_du_gars_adapte.py  bot_vs_bot.py  engine_bot_vs_bot.py  game_engine.py  minimax_bot.py  minimax_bot_V2.py  mon_premier_bot.py  pyproject.toml  requirements.txt
.github/workflows/: actions.yml
archive/: README.md
archive/experiments/: kelawin_draft.py
archive/experiments/threading_meta/: Engine_for_Threading.py  interfaces.py  thread_bot.py
scripts/: play_bot_match.py  play_gui.py  watch_bots_gui.py
src/connect4/: __init__.py  __main__.py  cli.py  core.py  match.py
src/connect4/bots/: __init__.py  blocking_bot.py  kelawin_bot.py  minimax_bot.py  minimax_bot_v2.py  random_bot.py
src/connect4/ui/: __init__.py  bot_vs_bot_gui.py  player_vs_bot_gui.py
tests/: test_bots.py  test_core.py
